primeiro banner completo

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 </head>
 <body>
     <section>
+        <h2>Volta às aulas com promoções:</h2>
         <div class="bannerCarousel" >
             <div class="slide"><img src="" alt="first image"><a href="#"></a></div>
             <div class="slide"><img src=""alt="second image"><a href="#"></a></div>
         </div>
-        <!-- <button type="button" class="slick-prev">Previous</button> -->
-        <!-- <button type="button" class="slick-next">Next</button> -->
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> <!-- insert jquery-->
