etapa: banners de departamento

--- a/index.html
+++ b/index.html
@@ -10,10 +10,25 @@
 </head>
 <body>
     <section>
-        <h2>Volta às aulas com promoções:</h2>
+        <h1>Volta às aulas com promoções</h1>
+        
         <div class="bannerCarousel" >
-            <div class="slide"><img src="" alt="first image"><a href="#"></a></div>
-            <div class="slide"><img src=""alt="second image"><a href="#"></a></div>
+            <div class="slide"><a href="#"><img src="" alt="first image"></a></div>
+            <div class="slide"><a href="#"><img src=""alt="second image"></a></div>
+        </div>
+                <!-- carousel of departments -->
+            <h2>Compre por categoria</h2>
+
+        <div class="bannerCarouselDepartments">
+            <div class="slideDp"><a href="#"><img src=""alt="first image" style="width: 202px;"><p>Caderno Argolado</p></a></div>
+            <div class="slideDp"><a href="#"><img src=""alt="second image"><p>Lancheira</p></a></div>
+            <div class="slideDp"><a href="#"><img src=""alt="third image"><p>Lápis de Cor</p></a></div>
+            <div class="slideDp"><a href="#"><img src=""alt="fourth image"><p>Mochila</p></a></div>
+            <div class="slideDp"><a href="#"><img src=""alt="fifith image"><p>Hidrocor</p></a></div>
+            <div class="slideDp"><a href="#"><img src=""alt="sixth image"><p>Estojo</p></a></div>
+            <div class="slideDp"><a href="#"><img src=""alt="seventh image"><p>Borrachas</p></a></div>
+            <div class="slideDp"><a href="#"><img src=""alt="octave image"><p>Calculadora</p></a></div>
+
         </div>
     </section>
 
