--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
 
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <section>
@@ -19,6 +18,7 @@
         <div class="bannerCarousel" >
             <li class="slide"><a href="#"><img src="" alt="first image"></a></li>
             <li class="slide"><a href="#"><img src=""alt="second image"></a></li>
+            <li class="slide"><a href="#"><img src=""alt="third image"></a></li>
         </div>
                 <!-- carousel of departments -->
         <div class="subtitleCarouselDepartments">
